[gd_scene load_steps=9 format=3 uid="uid://cmrgen2r562ou"]

[ext_resource type="Script" path="res://core/system/scene/end_screen.gd" id="1_cwniu"]
[ext_resource type="FontFile" uid="uid://cesouak3176ok" path="res://core/misc_assets/resources/Univers_Condensed_Regular.ttf" id="1_r53vj"]
[ext_resource type="PackedScene" uid="uid://dq45r84k0k6e2" path="res://core/game_objects/other/floor/floor.tscn" id="2_6ujsm"]
[ext_resource type="Script" path="res://core/components/tick_based_timer.gd" id="3_2fd14"]

[sub_resource type="Gradient" id="Gradient_i2ar1"]
offsets = PackedFloat32Array(0, 0.1, 0.2, 0.5, 0.8, 0.9, 1)
colors = PackedColorArray(0.5, 0.5, 0.5, 1, 0.3, 0.3, 0.3, 1, 0.15, 0.15, 0.15, 1, 0, 0, 0, 1, 0.15, 0.15, 0.15, 1, 0.3, 0.3, 0.3, 1, 0.5, 0.5, 0.5, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_cimlw"]
gradient = SubResource("Gradient_i2ar1")

[sub_resource type="LabelSettings" id="LabelSettings_6fyo3"]
font = ExtResource("1_r53vj")
font_size = 96

[sub_resource type="LabelSettings" id="LabelSettings_4x5ip"]
font = ExtResource("1_r53vj")
font_size = 48

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_cwniu")

[node name="Flash" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -72
position = Vector2(640, 360)
scale = Vector2(5, 720)
texture = SubResource("GradientTexture1D_cimlw")
metadata/_edit_lock_ = true

[node name="Victory" type="Label" parent="."]
z_index = 6
offset_right = 1280.0
offset_bottom = 240.0
text = "VICTORY!"
label_settings = SubResource("LabelSettings_6fyo3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalTime" type="Label" parent="."]
offset_left = 240.0
offset_top = 240.0
offset_right = 1040.0
offset_bottom = 320.0
text = "Final time: TO_BE_PROGRAMMED"
label_settings = SubResource("LabelSettings_4x5ip")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalDeaths" type="Label" parent="."]
offset_left = 240.0
offset_top = 320.0
offset_right = 1040.0
offset_bottom = 400.0
text = "Final deaths: TO_BE_PROGRAMMED"
label_settings = SubResource("LabelSettings_4x5ip")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Floor" parent="." instance=ExtResource("2_6ujsm")]
offset_right = 16.0
offset_bottom = 9.0
scale = Vector2(80, 80)
mouse_filter = 2
color_1 = Color(0, 0, 0, 0.286275)
color_2 = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="."]
z_index = 300
offset_left = 540.0
offset_top = 560.0
offset_right = 740.0
offset_bottom = 640.0
flat = true

[node name="PlayAgain" type="Label" parent="Button"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 80.0
text = "Play Again"
label_settings = SubResource("LabelSettings_4x5ip")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TickBasedTimer" type="Node" parent="."]
script = ExtResource("3_2fd14")
autostart = true
duration = 30
